--- a/package.json
+++ b/package.json
@@ -16,11 +16,9 @@
     "eslint-plugin-react": "^2.7.0",
     "gulp": "^3.9.0",
     "jest-cli": "^0.4.15",
-    "react": ">=0.13.0",
+    "react": "0.14.0-beta1",
+    "react-dom": "0.14.0-beta1",
     "react-component-gulp-tasks": "^0.7.0"
-  },
-  "peerDependencies": {
-    "react": ">=0.13.0"
   },
   "browserify-shim": {
     "react": "global:React"
